testsuite/tests/properties/invalid_matchers/missing_comp.lkt

import common

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: NullNode => e.prop()
        case e: Number   => e.prop()
    }
}
